--- a/Content/css/style.css
+++ b/Content/css/style.css
@@ -12,3 +12,13 @@ img#portrait {
       border-radius: 10px;
 }
 
+div. {
+      padding:100px;
+      margin: 500px;
+}
+
+h3 {
+      margin: 10px;
+      padding: 20px;
+      
+}
