--- a/Content/css/style.css
+++ b/Content/css/style.css
@@ -1,4 +1,3 @@
-
 img#logo { 
     margin: 10px;
     border: 1px solid black;
@@ -10,15 +9,11 @@ img#portrait {
       margin-left: 420px;
       border: 1px  solid white;
       border-radius: 10px;
-}
-
-div. {
-      padding:100px;
-      margin: 500px;
+      margin-bottom: 10px;
 }
 
 h3 {
-      margin: 10px;
-      padding: 20px;
+      text-align: center;
+      letter-spacing: 4px;
       
 }
